fiexd and issue that made buttons overlap text

--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -458,19 +458,19 @@ form{
       height: 230px;
       margin-left: 30px;
       font-family: $new_font;
-      font-size: 20px;
+      font-size: 16px;
 
     }
   }
 
   .social_buttons{
     display: flex;
-    padding-top: 30px;
+   
     justify-content: center;
     position: relative;
     left: 600px;
     // bottom: 20px;
-    top: 80px;
+   
     width: 400px;
     span{
       margin: 14px;
