--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -666,19 +666,17 @@ h1 {
     height: 230px;
     margin-left: 30px;
     font-family: "Merriweather Web", serif;
-    font-size: 20px; }
+    font-size: 16px; }
 
 .product-template-default.single.single-product .social_buttons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-top: 30px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   position: relative;
   left: 600px;
-  top: 80px;
   width: 400px; }
   .product-template-default.single.single-product .social_buttons span {
     margin: 14px; }
